--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
 			<div class="row no-gutters">
 				<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12 no-gutters">
 					<div class="work_content">
-						<img src="images/work5.png" class="img-fluid"  alt="work5">
+						<img src="images/work_1.jpg" class="img-fluid"  alt="work5">
 						<div class="work_hover overlay overlayleft">
-							<i class="far fa-paper-plane mb-2"></i>
-							<div class="text">
+							<div class="text text-center">
+								<i class="far fa-paper-plane mb-2"></i>
 								<h1>Project Name</h1>
 								<p>Facebook Marketing</p>
 							</div>
@@ -342,10 +342,10 @@
 				</div>
 				<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
 					<div class="work_content">
-						<img src="images/work8.jpeg" class="img-fluid" alt="work5">
-						<div class="work_hover overlay overlayleft">
-							<i class="far fa-paper-plane mb-2"></i>
+						<img src="images/work_2.jpeg" class="img-fluid" alt="work5">
+						<div class="work_hover overlay overlayleft">							
 							<div class="text">
+								<i class="far fa-paper-plane mb-2"></i>
 								<h1>Project Name</h1>
 								<p>Facebook Marketing</p>
 							</div>
@@ -354,10 +354,10 @@
 				</div>
 				<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
 					<div class="work_content">
-						<img src="images/work3.jpg" class="img-fluid" alt="work5">
-						<div class="work_hover overlay overlayleft">
-							<i class="far fa-paper-plane mb-2"></i>
+						<img src="images/work_3.jpeg" class="img-fluid" alt="work5">
+						<div class="work_hover overlay overlayleft">							
 							<div class="text">
+								<i class="far fa-paper-plane mb-2"></i>
 								<h1>Project Name</h1>
 								<p>Facebook Marketing</p>
 							</div>
@@ -366,10 +366,10 @@
 				</div>
 				<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
 					<div class="work_content">
-						<img src="images/work2.jpg" class="img-fluid" alt="work5">
-						<div class="work_hover overlay overlayleft">
-							<i class="far fa-paper-plane mb-2"></i>
+						<img src="images/work_4.jpeg" class="img-fluid" alt="work5">
+						<div class="work_hover overlay overlayleft">							
 							<div class="text">
+								<i class="far fa-paper-plane mb-2"></i>
 								<h1>Project Name</h1>
 								<p>Facebook Marketing</p>
 							</div>
@@ -380,10 +380,10 @@
 			<div class="row no-gutters">
 				<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
 					<div class="work_content">
-						<img src="images/work9.jpg" class="img-fluid"  alt="work5">
-						<div class="work_hover overlay overlayleft">
-							<i class="far fa-paper-plane mb-2"></i>
+						<img src="images/work_5.jpeg" class="img-fluid"  alt="work5">
+						<div class="work_hover overlay overlayleft">							
 							<div class="text">
+								<i class="far fa-paper-plane mb-2"></i>
 								<h1>Project Name</h1>
 								<p>Facebook Marketing</p>
 							</div>
@@ -392,10 +392,10 @@
 				</div>
 				<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
 					<div class="work_content">
-						<img src="images/work1.jpg" class="img-fluid" alt="work5">
-						<div class="work_hover overlay overlayleft">
-							<i class="far fa-paper-plane mb-2"></i>
+						<img src="images/work_6.jpeg" class="img-fluid" alt="work5">
+						<div class="work_hover overlay overlayleft">							
 							<div class="text">
+								<i class="far fa-paper-plane mb-2"></i>
 								<h1>Project Name</h1>
 								<p>Facebook Marketing</p>
 							</div>
@@ -404,10 +404,10 @@
 				</div>
 				<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
 					<div class="work_content">
-						<img src="images/work3.jpg" class="img-fluid" alt="work5">
-						<div class="work_hover overlay overlayleft">
-							<i class="far fa-paper-plane mb-2"></i>
+						<img src="images/work_7.jpeg" class="img-fluid" alt="work5">
+						<div class="work_hover overlay overlayleft">							
 							<div class="text">
+								<i class="far fa-paper-plane mb-2"></i>
 								<h1>Project Name</h1>
 								<p>Facebook Marketing</p>
 							</div>
@@ -416,10 +416,10 @@
 				</div>
 				<div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
 					<div class="work_content">
-						<img src="images/work2.jpg" class="img-fluid" alt="work5">
-						<div class="work_hover overlay overlayleft">
-							<i class="far fa-paper-plane mb-2"></i>
+						<img src="images/work_8.jpeg" class="img-fluid" alt="work5">
+						<div class="work_hover overlay overlayleft">							
 							<div class="text">
+								<i class="far fa-paper-plane mb-2"></i>
 								<h1>Project Name</h1>
 								<p>Facebook Marketing</p>
 							</div>
