--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					       <a class="nav-link" href="#">Our Work</a>
 					     </li>
 					     <li class="nav-item">
-					      	<a href="#" class="nav-link btn custom_btn text-white">Free Consultation</a>
+					      	<button type="submit" class="nav-link btn btn-danger custom_btn text-white">Free Consultation</button>
 					     </li>
 
 					   </ul>
