--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="header_top">
 			<div class="container">
 				<div class="row">
-					<div class="col col-12">
+					<div class="col-12">
 						<div class="top_content float-right">
 							<ul class="list-inline">
 								<li class="list-inline-item">
