--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 						<div class="col-xl-4 col-lg-4 col-md-5 col-sm-12 col-12">
 							<div class="card_image">
 								<div class="step_bg">
-									<img src="images/card_img_two.jpg" class="w-100">
+									<img src="images/card_img_three.jpg" class="w-100">
 								</div>
 								<div class="step_one">
 									<img src="images/step3.png" class="img-fluid" alt="">
@@ -274,7 +274,7 @@
 						<div class="col-xl-4 col-lg-4 col-md-5 col-sm-12 col-12">
 							<div class="card_image">
 								<div class="step_bg">
-									<img src="images/card_img_one.png" class="w-100">
+									<img src="images/card_img_four.jpg" class="w-100">
 								</div>
 								<div class="step_two">
 									<img src="images/step4.png" class="img-fluid" alt="">
@@ -289,7 +289,7 @@
 						<div class="col-xl-4 col-lg-4 col-md-5 col-sm-12 col-12">
 							<div class="card_image">
 								<div class="step_bg">
-									<img src="images/card_img_one.png" class="w-100">
+									<img src="images/card_img_four.jpg" class="w-100">
 								</div>
 								<div class="step_two">
 									<img src="images/step4.png" class="img-fluid" alt="">
@@ -453,6 +453,8 @@
 						<div class="card card-body">
 							<!-- contact form start -->
 							<div class="contact_form">
+								<button class="btn cross_btn" type="button" data-toggle="collapse"data-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm"><i class="fas fa-times"></i></button>
+
 								<div class="form_title">
 									<p class="text-center">Sit down with our experts to receive a free customized marketing plan for your business + Learn How To Use Google and Facebook to get 5000% ROI or more</p>
 									
@@ -470,7 +472,7 @@
 												<input type="text" class="form-control" placeholder="Company Name">
 											</div>
 											<div class="submit_btn text-center">
-												<button type="submit" class="btn">Submit Now</button>
+												<button type="submit" class="btn btn-default">Submit Now</button>
 											</div>
 										</form>	
 									</div>
