--- a/index.html
+++ b/index.html
@@ -453,6 +453,7 @@
 						<div class="card card-body">
 							<!-- contact form start -->
 							<div class="contact_form">
+								<div class="triangle-up"></div>
 								<button class="btn cross_btn" type="button" data-toggle="collapse"data-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm"><i class="fas fa-times"></i></button>
 
 								<div class="form_title">
