--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 						<div class="top_content float-right">
 							<ul class="list-inline">
 								<li class="list-inline-item">
-									<i class="fas fa-mobile-alt mobile p-2"></i><span>6337 3128</span>
+									<i class="fas fa-mobile-alt mobile"></i><span>6337 3128</span>
 								</li>
 								<li class="list-inline-item">|</li>
 								<li class="list-inline-item">
-									<i class="fas fa-envelope envelope p-2"></i><span>info@business.co</span>
+									<i class="fas fa-envelope envelope"></i><span>info@business.co</span>
 								</li>
 								<li class="list-inline-item">
 									<i class="fab fa-facebook-f facebook"></i>
