--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>	
 	<!-- header start -->
 	<header>
+		<!-- header top start -->
 		<div class="header_top">
 			<div class="container">
 				<div class="row">
@@ -43,7 +44,8 @@
 				</div>
 			</div>
 		</div>
-		<!-- header bottom bottom -->
+		<!-- header top end -->
+		<!-- header menu start -->
 		<div class="header_menu">
 			<div class="container">
 				<!-- navbar start -->
@@ -87,7 +89,7 @@
 				<!-- navbar end -->
 			</div>
 		</div>
-		<!-- header bottom end -->
+		<!-- header menu end -->
 	</header>
 	<!-- header end -->
 
